update java version 3.2.4